# crawler-hub

./: .gitignore  cli.py  config.example.yaml  pyproject.toml
analyzers/: tool_analyzer.py  video_analyzer.py
notifier/: server_chan.py
reporter/: weekly.py
scheduler/: import_xhs.py  merge_db.py  run_overseas.sh  run_weekly.sh
sources/: arxiv.py  bilibili.py  douyin.py  github_trending.py  huggingface.py  modelscope.py  rss_news.py  xiaohongshu.py  youtube_shorts.py
storage/: db.py
tests/: test_db.py
web/data/: latest.json
